feaf(TCOMP-2391) phase out layerspector for api test jenkins pod (#694)
https://jira.talendforge.org/browse/TCOMP-2391
Jenkins job edition to move to custom builder tsbi base image

- tools are now setups with asdf
- Pod config is now shared between build and scan .jenkins/jenkins_pod.yml
- rename veracode steps to uniformize with others projects